vlib/v/checker/tests/auto_deref_assign_err.vv
fn main() {
	mut a := 42
	println('before sub: ' + a.str())
	sub(mut a)
	println('after sub: ' + a.str())
}

fn sub(mut o &int) {
	println('in function got: ' + o.str())
	o = 'mutate int as string??'
}
